--- a/css/normalize.css
+++ b/css/normalize.css
@@ -17,6 +17,7 @@ html {
  */
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 /* HTML5 display definitions
    ========================================================================== */
